--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "-": "^0.0.1",
     "@expo/vector-icons": "^15.0.3",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/bottom-tabs": "^7.10.1",
@@ -23,12 +24,14 @@
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.22",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
     "kit": "^2.0.31",
-    "native": "^0.3.3",
+    "lottie-react-native": "~7.3.1",
+    "native": "^0.2.0",
     "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
