--- a/backend/testcreator/Dockerfile
+++ b/backend/testcreator/Dockerfile
@@ -1,11 +1,10 @@
 FROM tomcat:9.0-jdk17
 
-# Clean default webapps
+# Remove default apps
 RUN rm -rf /usr/local/tomcat/webapps/*
 
-# Copy your WAR file
+# Copy WAR
 COPY testora.war /usr/local/tomcat/webapps/ROOT.war
 
-EXPOSE 8080
-
-CMD ["catalina.sh", "run"]
+# Replace Tomcat port with Render PORT
+CMD sed -i "s/port=\"8080\"/port=\"${PORT}\"/" /usr/local/tomcat/conf/server.xml && catalina.sh run
