--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "-": "^0.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+    "@ckeditor/ckeditor5-build-classic": "^38.1.1",
     "@ckeditor/ckeditor5-react": "^11.0.1",
     "@expo/vector-icons": "^15.0.3",
     "@lottiefiles/dotlottie-react": "^0.13.5",
@@ -20,7 +19,6 @@
     "@react-navigation/drawer": "^7.7.13",
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.3",
-    "chart": "^0.1.2",
     "expo": "~54.0.32",
     "expo-checkbox": "~5.0.8",
     "expo-clipboard": "~8.0.8",
@@ -33,8 +31,8 @@
     "expo-status-bar": "~3.0.9",
     "kit": "^2.0.31",
     "native": "^0.2.0",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
