--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,6 @@
     "@ckeditor/ckeditor5-react": "^11.0.1",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-native-menu/menu": "^1.2.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/stack": "^7.6.16",
@@ -48,6 +47,7 @@
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "private": true
